and makes them available separately. See "HOL/ex/Induction_Scheme.thy"
for examples,

* Records. Removed K_record, and replaced it by pure lambda term
%x. c. The simplifier setup is now more robust against eta expansion.
INCOMPATIBILITY: in cases explicitly referring to K_record.

* Metis prover is now an order of magnitude faster, and also works
with multithreading.

* Sledgehammer no longer produces structured proofs by default. To enable, 
declare [[sledgehammer_full = true]]. Attributes reconstruction_modulus,  
reconstruction_sorts renamed sledgehammer_modulus, sledgehammer_sorts. 
INCOMPATIBILITY.

*** ZF ***

* Renamed theories:

  Datatype.thy  -> Datatype_ZF.thy
  Inductive.thy -> Inductive_ZF.thy
  Int.thy       -> Int_ZF.thy
  IntDiv.thy    -> IntDiv_ZF.thy
  Nat.thy       -> Nat_ZF.thy
  List.thy      -> List_ZF.thy
  Main.thy      -> Main_ZF.thy

 This is to allow to load both ZF and HOL in the same session.

 INCOMPATIBILITY: ZF theories that import individual theories below
 Main might need to be adapted. For compatibility, a new 
 "theory Main imports Main_ZF begin end" is provided, so if you just
 imported "Main", no changes are needed.


*** ML ***

* Functor NamedThmsFun: data is available to the user as dynamic fact
(of the same name).

* Removed obsolete "use_legacy_bindings" function.  INCOMPATIBILITY.

* ML within Isar: antiquotation @{const name} or @{const
name(typargs)} produces statically-checked Const term.

* The ``print mode'' is now a thread-local value derived from a global
template (the former print_mode reference), thus access becomes
non-critical.  The global print_mode reference is for session
management only; user-code should use print_mode_value,
print_mode_active, PrintMode.setmp etc.  INCOMPATIBILITY.

* system/system_out provides a robust way to invoke external shell
commands, with propagation of interrupts (after Poly/ML 5.2).  Do not
use OS.Process.system etc. directly.


*** System ***
